--- a/datos.html
+++ b/datos.html
@@ -37,7 +37,7 @@
 <p><center><img src="masinfo.JPG" alt="mas informacion"></center></p>
 
 <h2 class="city"><center>Contacto</center></h2>
- <span> <center><p><a href="https://www.alquilerargentina.com/alojamientos/cd82-Departamento-Departamento-Espacio-Diez-La-Plata.html"> <img src="link.JPG"/></a><p></center>
+ <span> <center><p><a href="https://www.alquilerargentina.com/alojamientos/cd82-Departamento-Departamento-Espacio-Diez-La-Plata.html"> <img src="argen.jpg"/></a><p></center>
 
                <p><center><a href="https://api.whatsapp.com/send?phone=(0221)155548586"><img src="whatsapp.jpeg"/></center></a></p>
 
